@@ -57,6 +57,7 @@ Use this option when you want to change a sysctl setting.
 .TP
 .B "-p"
 Load in sysctl settings from the file specified or /etc/sysctl.conf if none given.
+Specifying \- as filename means reading data from standard input.
 .TP
 .B "-a"
 Display all values currently available.
